dashboard and report by worker thread

--- a/views/pages/reports/all-awb.ejs
+++ b/views/pages/reports/all-awb.ejs
@@ -11,7 +11,7 @@ var endate = new Date();
   <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
-        <div class="card-title">All Awb Status</div>
+        <div class="card-title">All AWB Status</div>
         <!--<a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a>-->
       </div>
       <div id="myLoader"><img src="/img/preloader.gif"></div>
