--- a/views/pages/reports/all-report.ejs
+++ b/views/pages/reports/all-report.ejs
@@ -1,6 +1,14 @@
 <% layout('./shared/__template')%>
 <%
-var typeData = {ALLAWBSTATUS:"All Awb Status"}
+var typeData = {
+  ALLAWBSTATUS:"All AWB Status",
+  DELIVERYDETAIL:'Delivery Detail',
+  PACKAGEDETAIL: 'Package Detail',
+  POSTBOXETCPACKAGE: 'Post Boxes Etc Packages',
+  NINETOFIVEPACKAGE: '9to5 Packages',
+  NODOCSPACKAGE:'NoDocs',
+  USERS: 'Users'
+}
 %>
 <div class='gutters'>
   <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
