--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -90,9 +90,11 @@ var endate = new Date();
         </div>
       </div>
       <div class="card-body">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4">          
-          <label class="w-10-rem align-text-bottom">Select Dates : </label>
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-postbox" value="<%=(query.daterange && query.type=='postbox')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">        
+            <input type="text" class="form-control form-control-sm" name="" id="daterange-postbox-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;">        
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_postbox_report()">
+          </div>
         </div>
         <div class="card-tools  pd-18 col-md-12">
           <form method="post" onsubmit="filterData(event)">
@@ -101,7 +103,7 @@ var endate = new Date();
                 <div class="row">
                   <span class="col-md-5 pt-10" style="margin-top: 8px;">By User</span>
                   <div class="col-md-7">
-                    <select class="form-control" name="users">
+                    <select class="form-control" name="users" id="postbox_detail_user">
                       <option value='all'>All</option>
                       <%users.forEach(function(user){ %>
                       <option value="<%=user._id%>"><%=user.username%></option>
@@ -115,7 +117,7 @@ var endate = new Date();
 
                   <span class="col-md-5 pt-10" style="margin-top: 8px;">Package Status</span>
                   <div class="col-md-7">
-                    <select class="form-control" name="package_status">
+                    <select class="form-control" name="package_status" id="post_detail_status">
                       <option value='all'>All</option>
                       <%Object.keys(package_status).map(function(st){ %>
                       <option value="<%=package_status[st]%>"><%=package_status[st]%></option>
@@ -140,7 +142,7 @@ var endate = new Date();
               <th>Original Barcode#</th>
               <!-- <th>Date Created</th> -->
               <th>Package Status</th>
-              <th>Awb Number</th>
+              <th>AWB Number</th>
               <th>Customer Name</th>
               <th>Store Location</th>
             </tr>
@@ -158,14 +160,15 @@ var endate = new Date();
     <div class="card full-height">
       <div class="card-header">
         <div class="row">
-          <div class="card-title pd-18 col-md-12 ">9to5 packages</div>
-          
+          <div class="card-title pd-18 col-md-12 ">9to5 Packages</div>          
       </div>
     </div>
     <div class="card-body daterangepickerbody-1">
-      <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 ">
-        <label class="w-10-rem align-text-bottom">Select Dates : </label>
-        <input type="text" class="form-control form-control-sm" name="" id="daterange-nineToPackages" value="<%=(query.daterange && query.type=='nineToPackages')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">        
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-ninetofive-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;">        
+          <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_ninetofive_package_report()">
+        </div>
       </div>
       <div class="card-tools  pd-18 col-md-12">
         <form method="post" onsubmit="filterData(event)">
@@ -174,7 +177,7 @@ var endate = new Date();
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">By User</span>
                 <div class="col-md-7">
-                  <select class="form-control" name="users">
+                  <select class="form-control" name="users" id="ninetofive_detail_user">
                     <option value='all'>All</option>
                     <%users.forEach(function(user){ %>
                     <option value="<%=user._id%>"><%=user.username%></option>
@@ -187,7 +190,7 @@ var endate = new Date();
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">Package Status</span>
                 <div class="col-md-7">
-                  <select class="form-control" name="package_status">
+                  <select class="form-control" name="package_status" id="ninetofive_detail_status">
                     <option value='all'>All</option>
                     <%Object.keys(package_status).map(function(st){ %>
                     <option value="<%=package_status[st]%>"><%=package_status[st]%></option>
@@ -210,7 +213,7 @@ var endate = new Date();
             <th>Original Barcode#</th>
             <!-- <th>Date Created</th> -->
             <th>Package Status</th>
-            <th>Awb Number</th>
+            <th>AWB Number</th>
             <th>Customer Name</th>
             <th>Store Location</th>
           </tr>
@@ -228,14 +231,16 @@ var endate = new Date();
     <div class="card full-height">
       <div class="card-header">
         <div class="row">
-          <div class="card-title pd-18 col-md-12">No docs </div>
+          <div class="card-title pd-18 col-md-12">NoDocs </div>
           
         </div>
       </div>
       <div class="card-body daterangepickerbody-1">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4">
-          <label class="w-10-rem align-text-bottom">Select Dates : </label>
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-noDocs" value="<%=(query.daterange && query.type=='noDocs')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">        
+            <input type="text" class="form-control form-control-sm" name="" id="daterange-nodocs-package-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;">        
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_nodocs_package_report()">
+          </div>
         </div>
         <div class="card-tools  pd-18 col-md-12">
           <form method="post" onsubmit="filterData(event)">
@@ -244,7 +249,7 @@ var endate = new Date();
                 <div class="row">
                   <span class="col-md-5 pt-10" style="margin-top: 8px;">By User</span>
                   <div class="col-md-7">
-                    <select class="form-control" name="users">
+                    <select class="form-control" name="users" id="nodocs_detail_user">
                       <option value='all'>All</option>
                       <% users.forEach(function(user){ %>
                       <option value="<%=user._id%>"><%=user.username%></option>
@@ -257,7 +262,7 @@ var endate = new Date();
                 <div class="row">
                   <span class="col-md-5 pt-10" style="margin-top: 8px;">Package Status</span>
                   <div class="col-md-7">
-                    <select class="form-control" name="package_status">
+                    <select class="form-control" name="package_status" id="nodocs_detail_status">
                       <option value='all'>All</option>
                       <%Object.keys(package_status).map(function(st){ %>
                       <option value="<%=package_status[st]%>"><%=package_status[st]%></option>
@@ -280,7 +285,7 @@ var endate = new Date();
             <tr>
               <th>Original Barcode#</th>
               <th>Package Status</th>
-              <th>Awb Number</th>
+              <th>AWB Number</th>
               <th>Customer Name</th>
               <th>Store Location</th>
             </tr>
@@ -303,9 +308,11 @@ var endate = new Date();
         </div>
       </div>
       <div class="card-body">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
-          <label class="w-10-rem align-text-bottom">Select Dates : </label>
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-user" value="<%=(query.daterange && query.type=='user')? query.daterange: dateRangeDefault%>"  placeholder="Select dates"/>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">        
+            <input type="text" class="form-control form-control-sm" name="" id="daterange-users-dashboard-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;">        
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_users_report()">
+          </div>
         </div>
       <div class="table-responsive ">
         <table id="user_table" class=" display table table-striped table-hover dataTable ">
@@ -555,3 +562,4 @@ function get_data_dataTable(dataTable, daterange){
   }
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
