--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -6,7 +6,7 @@
 var endate = new Date();      
         endate.setDate(endate.getDate());
         var stdate = new Date();
-        stdate.setDate(stdate.getDate() -3);      
+        stdate.setDate(stdate.getDate());      
         var dateRangeDefault = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
         (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear(); 
 %>
@@ -16,15 +16,19 @@ var endate = new Date();
     <div class="card full-height">
       <div class="card-header">
         <div class="row">
-          <div class="card-title pd-18 col-md-2">All Awb Status</div>
+          <div class="card-title pd-18 col-md-2">All AWB Status</div>
         </div>
       </div>
       <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody-1">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+        <!-- <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
           <label class="w-10-rem align-text-bottom">Select Dates : </label>
           <input type="text" class="form-control form-control-sm" name="" id="daterange-awbStatus" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
-        </div>
+        </div> -->
+        <div class="col-xs-12 col-sm-12 float-right">        
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-allAwb" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
+          <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_allawb_report()">
+      </div>
         <div class="table-responsive ">
         <table id="awbStatus" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -84,18 +88,24 @@ var endate = new Date();
       </div>
     </div>
     <div class="card-body daterangepickerbody-1">
-      <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4">
+      <!-- <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4">
         <label class="w-10-rem align-text-bottom">Select Dates : </label>
         <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+      </div> -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12">        
+          <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
+          <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_detail_report()">
       </div>
-      <div class="card-tools  pd-18 col-md-10">
+    </div>
+      <div class="col-xs-12 col-sm-12 col-md-12">
         <form method="post" onsubmit="filterData(event)">
           <div class="row">
             <div class="col-md-3">
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">By User</span>
                 <div class="col-md-7">
-                  <select class="form-control" name="users">
+                  <select class="form-control" name="users" id="package_detail_user">
                     <option value='all'>All</option>
                     <%users.forEach(function(user){ %>
                     <option value="<%=user._id%>"><%=user.username%></option>
@@ -108,7 +118,7 @@ var endate = new Date();
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">Package Status</span>
                 <div class="col-md-7">
-                  <select class="form-control" name="package_status">
+                  <select class="form-control" name="package_status" id="package_detail_status">
                     <option value='all'>All</option>
                     <%Object.keys(package_status).map(function(st){ %>
                     <option value="<%=package_status[st]%>"><%=package_status[st]%></option>
@@ -153,10 +163,16 @@ var endate = new Date();
         </div>
       </div>
       <div class="card-body daterangepickerbody-1">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
+        <!-- <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
           <label class="w-10-rem align-text-bottom">Select Dates : </label>
           <input type="text" class="form-control form-control-sm" name="" id="daterange-dekivery-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+        </div> -->
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">        
+            <input type="text" class="form-control form-control-sm" name="" id="daterange-delivery-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_delivery_report()">
         </div>
+      </div>
         <div class="table-responsive ">
         <table id="delivery_table" class=" display table table-striped table-hover dataTable ">
           <thead>
@@ -406,3 +422,4 @@ var endate = new Date();
 
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
