--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -37,9 +37,15 @@
 						<p>Reports </p>
 					</a>
 				</li>
-				<!--<li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/all-report/download')) { %> active <% } %>">
+					<a href="/reports/all-report/download">
+						<i class="fa fa-user"></i>
+						<p>My Reports </p>
+					</a>
+				</li>
+				<!-- <li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#reports">
-						<i class="fa fa-file"></i>
+						<i class="fa fa-user"></i>
 						<p>Reports</p>
 						<span class="caret"></span>
 					</a>
@@ -47,7 +53,7 @@
 						<ul class="nav nav-collapse">
 							<li <% if (page.includes('/reports/all-awb/status')) { %> class="active" <% } %>>
 								<a href="/reports/all-awb/status">
-									<span class="sub-item">All Awb Status</span>
+									<span class="sub-item">All AWB Status</span>
 								</a>
 							</li>
 							<li <% if (page.includes('/reports/all-report/download')) { %> class="active" <% } %>>
@@ -58,7 +64,7 @@
 							
 						</ul>
 					</div>
-				</li>-->
+				</li> -->
 				<% } %>
 				<% if (user.roles[0].type == "Customers") { %>
 				<li class="nav-item <% if (page.includes('/dashboard')) { %> active <% } %>">
