--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -25,11 +25,22 @@ var endate = new Date();
           <label class="w-10-rem align-text-bottom">Select Dates : </label>
           <input type="text" class="form-control form-control-sm" name="" id="daterange-awbStatus" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
         </div> -->
-        <div class="col-xs-12 col-sm-12 float-right">        
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-allAwb" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
-          <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_allawb_report()">
-      </div>
-        <div class="table-responsive ">
+        <div class="row">
+          <div class="col-md-4"> 
+            <div class="row"> 
+              <span class="col-md-5 " style="margin-top: 8px;">Select Date</span>  
+              <div class="col-md-7"> 
+                <input type="text" class="form-control form-control-sm" name="" id="daterange-allAwb" class="form-control" style=" float: left;height: 40px !important;" value=""  placeholder="Select dates" >        
+          
+              </div>
+            </div>  
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">        
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_allawb_report()">
+          </div>
+        </div>
+        
+        <div class="table-responsive" style="margin-top: 10px;">
         <table id="awbStatus" class=" display table table-striped table-hover dataTable ">
           <thead>
             <tr>
@@ -57,9 +68,19 @@ var endate = new Date();
         </div>
       </div>
       <div class="card-body daterangepickerbody-1">
-        <div class="d-flex w-100 d-inline-block py-4 col-xs-10 col-sm-4 float-left ">
-          <label class="w-10-rem align-text-bottom">Select Dates : </label>
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-package-status" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
+        
+        <div class="row">
+          <div class="col-md-4"> 
+            <div class="row"> 
+              <span class="col-md-5 " style="margin-top: 8px;">Select Date</span>  
+              <div class="col-md-7"> 
+                <input type="text" class="form-control form-control-sm" name="" id="daterange-package-status-detail" class="form-control" style="float: left; height: 40px !important;" value=""  placeholder="Select dates" > 
+              </div>
+            </div>  
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">        
+            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_status_report()">
+          </div>
         </div>
         <div class="table-responsive ">
         <table id="package_status" class=" display table table-striped table-hover dataTable ">
@@ -92,15 +113,19 @@ var endate = new Date();
         <label class="w-10-rem align-text-bottom">Select Dates : </label>
         <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
       </div> -->
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">        
-          <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
-          <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_detail_report()">
-      </div>
-    </div>
+      
       <div class="col-xs-12 col-sm-12 col-md-12">
-        <form method="post" onsubmit="filterData(event)">
+        <!-- <form method="post" onsubmit="filterData(event)"> -->
           <div class="row">
+            <div class="col-md-4">
+            <div class="row"> 
+              <span class="col-md-5 pt-7" style="margin-top: 8px;">Select Date</span>  
+              <div class="col-md-7"> 
+                <input type="text" class="form-control form-control-sm" name="" id="daterange-package-detail" class="form-control" style="float: left; height: 40px !important;" value=""  placeholder="Select dates" >        
+          
+              </div>
+            </div>  
+          </div>
             <div class="col-md-3">
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">By User</span>
@@ -114,7 +139,7 @@ var endate = new Date();
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
               <div class="row">
                 <span class="col-md-5 pt-10" style="margin-top: 8px;">Package Status</span>
                 <div class="col-md-7">
@@ -130,12 +155,12 @@ var endate = new Date();
             <input type="hidden" name="filter_for" value="all_package_table" />
             
           <div class="col-md-2 pl-10">
-            <input type="submit" value="Filter" class="btn btn-primary" />
+            <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_detail_report()">
           </div>
       </div>
-      </form>
+      <!-- </form> -->
     </div>
-      <div class="table-responsive ">
+      <div class="table-responsive " style="margin-top: 10px;">
       <table id="all_package_table" class=" display table table-striped table-hover dataTable ">
         <thead>
           <tr>
@@ -168,12 +193,21 @@ var endate = new Date();
           <input type="text" class="form-control form-control-sm" name="" id="daterange-dekivery-detail" value="<%=dateRangeDefault%>"  placeholder="Select dates"/>
         </div> -->
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12">        
-            <input type="text" class="form-control form-control-sm" name="" id="daterange-delivery-detail" class="form-control" style="width: 30%; float: left;margin-left: 1%; height: 40px !important;" value=""  placeholder="Select dates" style="width: 30%; float: left;margin-left: 1%;"">        
+          <div class="col-md-4"> 
+            <div class="row"> 
+              <span class="col-md-5 " style="margin-top: 8px;">Select Date</span>  
+              <div class="col-md-7"> 
+                <input type="text" class="form-control form-control-sm" name="" id="daterange-delivery-detail" class="form-control" style="float: left; height: 40px !important;" value=""  placeholder="Select dates">        
+            
+              </div>
+            </div>  
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">        
             <input type="button" value="Create Csv" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_delivery_report()">
+          </div>
         </div>
-      </div>
-        <div class="table-responsive ">
+        
+        <div class="table-responsive " style="margin-top: 10px;">
         <table id="delivery_table" class=" display table table-striped table-hover dataTable ">
           <thead>
             <tr>
@@ -386,7 +420,7 @@ var endate = new Date();
     $("#all_package_table tbody").html("");
     $("#all_package_table tbody").append(result)
     if (!($.fn.dataTable.isDataTable('#all_package_table'))) {
-      $("#all_package_table").DataTable({ searching: false, "bLengthChange": false });
+      $("#all_package_table").DataTable({  });
     }
   }
 
