--- a/views/pages/reports/all-report.ejs
+++ b/views/pages/reports/all-report.ejs
@@ -7,7 +7,8 @@ var typeData = {
   POSTBOXETCPACKAGE: 'Post Boxes Etc Packages',
   NINETOFIVEPACKAGE: '9to5 Packages',
   NODOCSPACKAGE:'NoDocs',
-  USERS: 'Users'
+  USERS: 'Users',
+  PACKAGESTATUS: 'Package Status'
 }
 %>
 <div class='gutters'>
