dashboard & report via worker

--- a/views/pages/reports/all-report.ejs
+++ b/views/pages/reports/all-report.ejs
@@ -28,7 +28,7 @@ var typeData = {
             <tr>
               <th>Report Type</th>
               <th>Date Range</th>
-              <th>user Name</th>
+              <th>User Name</th>
               <th>Action</th>
               <th>Date</th>             
             </tr>
