--- a/views/pages/warehouse/snapshot/package/list-all.ejs
+++ b/views/pages/warehouse/snapshot/package/list-all.ejs
@@ -170,13 +170,13 @@ var endate = new Date();
                 <td><%= pkg.storeLocation ?pkg.storeLocation : '9to5' %></td>
                 <td><%= pkg.barcode %></td>
 
-                <td><%= pkg.description %></td>
+                <td><%= (pkg.packageType == 'Cube' && pkg.masterDescription) ? pkg.masterDescription : pkg.description %></td>
                 <td><%= pkg.lastStatusText %></td>
                 <!-- <td><%= pkg.location %></td> -->
                 <td><%= pkg.packageType %></td>
                 <td><%=pkg.zoneName?pkg.zoneName:'' %></td>
                 <td><%=pkg.carrierName?pkg.carrierName:'' %></td>
-                <td><%= pkg.weight %></td>
+                <td><%= (pkg.packageType == 'Cube' && pkg.masterWeight) ? pkg.masterWeight : pkg.weight %></td>
                 <td><%= pkg.volumetricWeight.toFixed(2) %></td>
                 <td><%= pkg.express %></td>
                 <td><%= pkg.aging %></td>
