awb pdf &invoice

--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -141,11 +141,11 @@
                   <input type="hidden" name="invoice.id" value="{ID}" />
                   <div class="col-md-6 col-sm-12">
                     <label>Invoice #</label>
-                    <input type="text" class="form-control invoice_number-{CID}" name="invoice.number"  />
+                    <input type="text" class="form-control invoice_number-{CID}" name="invoice.number" value="#9999"  />
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
-                    <input type="text" class="form-control invoice_value-{CID}" name="invoice.value"  />
+                    <input type="text" class="form-control invoice_value-{CID}" name="invoice.value" value="0"  />
                   </div>
                   <div class="col-md-12">
                     <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
