--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -144,11 +144,11 @@
                   <input type="hidden" name="invoice.id" value="{ID}" />
                   <div class="col-md-6 col-sm-12">
                     <label>Invoice #</label>
-                    <input type="text" class="form-control" name="invoice.number" />
+                    <input type="text" class="form-control" name="invoice.number" value="#9999" />
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
-                    <input type="text" class="form-control" name="invoice.value" />
+                    <input type="text" class="form-control" name="invoice.value" value="0" />
                   </div>
                   <div class="col-md-12">
                     <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
